app/_components/mainHeader.module.css
.wrapper {
  background-color: rgb(80, 80, 80);
  padding: 15px 0;
  color: #000;
}

.cartIcon_wrapper {
  font-size: 1.6rem;
  text-decoration: none;
  color: #fff;
  position: relative;
}

.cartItemsCount {
  font-weight: bold;
  position: absolute;
  top: -20%;
  right: -60%;
  background-color: #fff;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  color: rgb(80, 80, 80);
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.2rem;
}

